syntax = "proto3";

option csharp_namespace = "Grpc.Demo.Server";
import "google/protobuf/timestamp.proto";

package order;

service OrderProtoService {
	rpc Get (OrderRequest) returns (OrderResponse);
	rpc GetStream (OrderRequest) returns (stream Order);
}

message OrderRequest {
	int32 count = 1;
}

message OrderResponse {
	repeated Order orders = 1;
}

message Order {
	string order_number = 1;
	Customer customer = 2;
	Item item = 3;
	google.protobuf.Timestamp order_date = 4;
}

message Customer {
	string first_name = 1;
	string last_name = 2;
	string address_line_1 = 3;
	string address_line_2 = 4;
	string city = 5;
	string state = 6;
	string zip = 7;
	string business_name = 8;
}

message Item {
	string name = 1;
	string description = 2;
	string sku = 3;
	int32 quantity = 4;
	double price_per_unit = 5;
	double total = 6;
}

